target/release/build/anyhow-f54d270fe669178a/stderr
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> /home/erik/wasm-pong-rs/target/release/build/anyhow-f54d270fe669178a/out/probe.rs:2:5
  |
2 |     #![feature(backtrace)]
  |     ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0554`.
